--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#106c99</color>
-    <color name="colorPrimaryDark">#00FFFFFF</color>
-    <color name="colorAccent">#FF4081</color>
-
+    <!--<color name="colorAccent">#FF408145</color>-->
     <color name="colorSunrise">#0D4A6A</color>
     <color name="colorSunset">#201D45</color>
+    <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorSunrise">#0D4A6A</color>-->
+    <!--<color name="colorSunset">#201D45</color>-->
 </resources>
